--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "hotload64"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Alex Bates <alex@nanaian.town>"]
+license = "unlicense"
 
 [dependencies]
+clap = { version = "4.4.18", features = ["derive"] }
+goblin = "0.8"
+paris = { version = "1.5.15", features = [ "macros" ] }
