--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ license = "unlicense"
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
 goblin = "0.8"
+notify-debouncer-mini = "0.4.1"
 paris = { version = "1.5.15", features = [ "macros" ] }
