--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.4.18", features = ["derive"] }
 goblin = "0.8"
 notify-debouncer-mini = "0.4.1"
 paris = { version = "1.5.15", features = [ "macros" ] }
+thiserror = "1.0.56"
