--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Alex Bates <alex@nanaian.town>"]
 license = "unlicense"
 
 [dependencies]
+capstone = "0.11.0"
 clap = { version = "4.4.18", features = ["derive"] }
 crossterm = "0.27.0"
 goblin = "0.8"
