--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "unlicense"
 [dependencies]
 capstone = "0.11.0"
 clap = { version = "4.4.18", features = ["derive"] }
+ctrlc = "3.4.2"
 goblin = "0.8"
 notify-debouncer-mini = "0.4.1"
 paris = { version = "1.5.15", features = [ "macros" ] }
