--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "hotload64"
+name = "hotload"
 version = "0.1.0"
 edition = "2021"
-authors = ["Alex Bates <alex@nanaian.town>"]
+authors = ["Alex Bates <alex@bates64.com>"]
 license = "unlicense"
 
 [dependencies]
